Remove inline styles Also aligns markup and CSS with core Sidekiq 8 markup and CSS. Fixes filtering and pagination on statuses page as well as sorting and ordering by table headers.

--- a/web/assets/statuses/stylesheets/styles.css
+++ b/web/assets/statuses/stylesheets/styles.css
@@ -1,58 +1,23 @@
-.progress {
-  background-color: #C8E1ED;
-}
-.progress-percentage {
-  margin: 5px;
-  padding-left: 4px;
-  color: #333;
-  text-align: left;
-  text-shadow: 0 0 5px white;
-  font-weight: bold;
-  font-size: 14px;
-}
-.bar {
-  background-color: #2897cb;
-  color: white;
-  text-shadow: 0 0 0;
-}
 .message {
   text-shadow: 0 0 5px white;
-  font-weight: bold; padding-left: 4px;
+  font-weight: bold;
+  padding-left: 4px;
   color: #333;
 }
-.actions {
+
+.text-center-nowrap {
   text-align: center;
-}
-.header {
-  text-align: center;
-}
-.header_update_time {
-  width: 10%;
-}
-.header_pct_complete {
-  width: 45%;
-}
-.btn-warning {
-  background-image: linear-gradient(#f0ad4e, #eea236)
-}
-.nav-container {
-  display: flex;
-  line-height: 45px;
-}
-.nav-container .pull-right {
-  float: none !important;
-}
-.nav-container .pagination {
-  display: flex;
-  align-items: center;
-}
-.nav-container .per-page, .filter-status {
-  display: flex;
-  align-items: center;
-  margin: 20px 0 20px 10px;
   white-space: nowrap;
 }
-.nav-container .per-page SELECT {
-  margin: 0 0 0 5px;
+
+.progress-inline {
+  margin-bottom: 0;
+}
+
+.message-overlay {
+  text-align: right;
+  padding-right: 0.5em;
+  background-color: transparent;
+  float: right;
 }
 
